--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,18 +17,24 @@
         android:layout_marginEnd="24dp"
         android:text="Faça seu Login"
         android:textSize="24sp" />
+
     <EditText
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
+        android:text="pequena@gandaopequena.com"
         android:layout_marginEnd="24dp"
-        android:hint="Usuário" />
+        android:hint="E-mail" />
+
     <EditText
+        android:id="@+id/senha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="18dp"
+        android:text="euamomeugandao"
         android:layout_marginEnd="24dp"
         android:hint="Senha"
         android:imeOptions="actionDone"
@@ -44,7 +50,6 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="64dp"
-        android:enabled="false"
         android:text="Enviar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
