Feito diversos ajustes de layout, adicionado header de authorization nas requisicoes, apagado arquivos desnecessarios

--- a/app/src/main/res/layout/activity_classificacao.xml
+++ b/app/src/main/res/layout/activity_classificacao.xml
@@ -24,13 +24,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="24dp"
+        android:textColor="@color/black"
         android:text="Classificação"
         android:textAlignment="center"
         android:textSize="30sp" />
 
     <ListView
+        android:layout_margin="10dp"
         android:id="@+id/listView"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
