--- a/app/src/main/res/layout/meu_spinner_item.xml
+++ b/app/src/main/res/layout/meu_spinner_item.xml
@@ -5,10 +5,10 @@
     android:singleLine="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center"
     android:ellipsize="marquee"
-    android:textAlignment="inherit"
     android:hint="xxxxx"
-    android:textColor="#78866b"
+    android:textColor="@color/black"
     android:textStyle="bold"
     android:fontFamily="sans-serif-black"
     android:textSize="25sp"
