--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:textColor="@color/black"
         android:layout_marginTop="200dp"
         android:layout_marginEnd="24dp"
         android:text="Faça seu Login"
