--- a/app/src/main/res/layout/activity_rodada.xml
+++ b/app/src/main/res/layout/activity_rodada.xml
@@ -14,33 +14,35 @@
             android:orientation="horizontal"
             android:layout_marginVertical="15dp">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_weight="1"
-                    android:fontFamily="sans-serif-black"
-                    android:text="Rodada:"
-                    android:textAlignment="textEnd"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
+            <TextView
+                android:layout_width="111dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
+                android:textColor="@color/black"
+                android:fontFamily="sans-serif-black"
+                android:text="Rodada:"
+                android:textAlignment="textEnd"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
 
-                <Spinner
-                    android:id="@+id/escolha"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginRight="120dp"
-                    android:layout_weight="1"
-                    android:textAlignment="textStart" />
+            <Spinner
+                android:id="@+id/escolha"
+                android:layout_width="100dp"
+                android:layout_marginEnd="50dp"
+                android:textColor="@color/black"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:textSize="25sp"
+                android:textAlignment="textStart" />
 
         </LinearLayout>
 
      <ListView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
+         android:textColor="@color/black"
          android:id="@+id/listView1"
          android:layout_marginTop="10dp"/>
 
