--- a/app/src/main/res/layout/linha_class.xml
+++ b/app/src/main/res/layout/linha_class.xml
@@ -2,63 +2,71 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:layout_height="match_parent">
+    android:layout_height="30dp">
 
     <TextView
         android:id="@+id/txtPosicao"
         android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:hint="8" />
+        android:layout_weight="2"/>
 
     <TextView
         android:id="@+id/txtClube"
         android:layout_width="match_parent"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:hint="clube" />
+        android:layout_weight="1"/>
 
     <TextView
         android:id="@+id/txtPontos"
         android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:hint="Pts" />
+        android:layout_weight="2"/>
 
     <TextView
         android:id="@+id/txtVitorias"
         android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:hint="VIT" />
+        android:layout_weight="2"/>
 
     <TextView
         android:id="@+id/txtEmpates"
         android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:hint="E" />
+        android:layout_weight="2"/>
 
     <TextView
         android:id="@+id/txtDerrotas"
         android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:hint="DER" />
+        android:layout_weight="2"/>
 
     <TextView
         android:id="@+id/txtGol_pro"
         android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:hint="GP" />
+        android:layout_weight="2"/>
 
     <TextView
         android:id="@+id/txtGol_contra"
         android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:hint="GC" />
+        android:layout_weight="2"/>
 
 </LinearLayout>
