--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,12 +9,22 @@
     android:textAlignment="center"
     tools:context=".Login">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="171dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginHorizontal="20dp"
+        app:srcCompat="@drawable/futreslogo"
+        />
+
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:textColor="@color/black"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="24dp"
         android:text="Faça seu Login"
         android:textSize="24sp" />
@@ -24,7 +34,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="24dp"
         android:hint="E-mail" />
 
@@ -55,4 +64,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
         app:layout_constraintVertical_bias="0.2" />
+
+
 </LinearLayout>
