--- a/app/src/main/res/layout/meu_spinner_item.xml
+++ b/app/src/main/res/layout/meu_spinner_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/text1"
+    android:id="@+id/textSpinner"
     android:singleLine="true"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:ellipsize="marquee"
